--- a/hw4/css/main.css
+++ b/hw4/css/main.css
@@ -1,4 +1,4 @@
-.main{
+.parents{
     width: 100%;
     height: 920px;
 }
@@ -17,6 +17,7 @@
 }
 h1{
     text-align: center;
+    color: black;
 }
 .b{
     width: 75%;
@@ -47,7 +48,7 @@ h1{
     .a{
         height: 150px;
     }
-    .main{
+    .parents{
         height: 820px;
     }
     h1{
