--- a/hw4.1/css/main.css
+++ b/hw4.1/css/main.css
@@ -1,6 +1,6 @@
 .fam{
     width: 100%;
-    height: 800px;
+    height: 900px;
 }
 .a {
     width: 100%;
@@ -9,44 +9,48 @@
     border-radius: 3%;
 }
 .top{
-    height: 600px;
+    height: 800px;
     display: flex;
 }
 .f{
     width: 25%;
     height: 700px;
     background: blueviolet;
+    border-radius: 3%;
 }
 .b {
     width: 100%;
     background: #203871;
     height: 300px;
+    border-radius: 3%;
 }
 .container{
     height: 600px;
     width: 100%;
+    margin-right: 30px;
 }
 .cde{
     display: flex;
-    align-items: center;
-    justify-content: space-evenly;
+    margin: 20px;
     width: 100%;
-    height: 250px;
+    height: 300px;
 }
 .box{
+    border-radius: 3%;
     width: 250px;
     height: 250px;
+    margin: 30px;
     background: rgb(63,94,251);
     background: radial-gradient(circle, rgba(63,94,251,1) 0%, rgba(252,70,107,1) 100%);
 }
 @media screen and (max-width:  1300px){
     .b{
         width: 100%;
-        height: 300px;
+        height: 250px;
     }
     .f{
         width: 100%;
-        height: 500px;
+        height: 400px;
     }
     .a{
         height: 150px;
@@ -55,10 +59,10 @@
         flex-direction: column;
     }
     .container{
-
+    margin-bottom: 40px;
     }
     .cde{
         display: flex;
-        justify-content: space-evenly;
+        justify-content: center;
     }
 }
