--- a/hw4.1/css/main.css
+++ b/hw4.1/css/main.css
@@ -32,14 +32,15 @@
 }
 .cde{
     display: flex;
+    justify-content: space-around;
     margin: 20px;
     width: 100%;
     height: 300px;
 }
 .box{
     border-radius: 3%;
-    width: 250px;
-    height: 250px;
+    width: 350px;
+    height: 350px;
     margin: 30px;
     background: rgb(63,94,251);
     background: radial-gradient(circle, rgba(63,94,251,1) 0%, rgba(252,70,107,1) 100%);
@@ -65,5 +66,9 @@
     .cde{
         display: flex;
         justify-content: center;
+    }
+    .box{
+        width: 250px;
+        height: 250px;
     }
 }
